# allegro-sdl2-shim

./: CHANGELOG.md  LOOP.md  LOOP.md~  README.md  TODO.md
allegro_shim/: CMakeLists.txt
allegro_shim/include/allegro5/: allegro_audio.h  allegro_base.h  allegro_bitmap.h  allegro_blender.h  allegro_color.h  allegro_config.h  allegro_display.h  allegro_draw.h  allegro_events.h  allegro_file.h  allegro_joystick.h  allegro_keyboard.h  allegro_mouse.h  allegro_state.h  allegro_timer.h  allegro_transform.h
allegro_shim/include/allegro5/internal/: allegro.h  allegro_audio.h  allegro_config.h  allegro_display.h  allegro_file.h  allegro_joystick.h
allegro_shim/src/: allegro_shim.cpp
research/: al_save_config_f.md  events_implementation.md
spec/: IMPLEMENTATION_PLAN.md  README.md  SPEC.md  addons_impl.md  audio_impl.md  core_impl.md  file_impl.md  graphics_impl.md  input_impl.md  thread_impl.md
